package com.sejong.newsletterservice.core.enums;

public enum EmailFrequency {
    DAILY, WEEKLY, MONTHLY
}