package com.sejong.newsletterservice.core.enums;

public enum PostType {
    NEWS,
    PROJECT,
    ARCHIVE,
    ;
}
