package com.sejong.newsletterservice.infrastructure.feign;


public interface UserClient {
}
